Use List.copyOf instead of Collections.unmodifiableList for immutables